# SQLi_IPS_With_LLMs

./: diagram.html  docker-compose.yml
analyze/: analyzer.py
attack/: attack.py  payloads.csv  payloads.txt
gateway/: Dockerfile  default.conf  guardrail.lua  response_filter.lua
guardrailv2/: Dockerfile  main.py  pyproject.toml
response-filter/: Dockerfile  main.py  pyproject.toml
service/database/: Dockerfile
service/gateway/: Dockerfile
service/presidio-analyzer/: Dockerfile
service/test-app/: Dockerfile
test-app/: Dockerfile  entrypoint.sh  pyproject.toml
test-app/config/: settings.py
test-app/core/: models.py  urls.py  views.py
test-app/core/migrations/: 0001_initial.py  0002_seed_books.py
test-app/django_guardrail/: __init__.py  apps.py  client.py  db.py  exceptions.py
test-app/templates/: base.html  book_detail.html  home.html  security.html
